[gd_scene load_steps=4 format=3 uid="uid://d2vyo8wjl5f80"]

[ext_resource type="Script" uid="uid://cr6vo6i8db0k1" path="res://assets/scripts/space_ship/dungeon_manager.gd" id="1_ffeav"]
[ext_resource type="Script" uid="uid://fg65j8vwp6mg" path="res://assets/scripts/space_ship/dungeon.gd" id="1_rlmda"]
[ext_resource type="PackedScene" uid="uid://ssjcsb526q2b" path="res://assets/scenes/space_ship/entity/player/player.tscn" id="5_y4eva"]

[node name="Dungeon" type="Node2D"]
auto_translate_mode = 1
script = ExtResource("1_rlmda")

[node name="Rooms" type="Node2D" parent="."]
script = ExtResource("1_ffeav")
alien_count = 25

[node name="Player" parent="." instance=ExtResource("5_y4eva")]
safe_margin = 2.0

[node name="EntranceMarkers" type="Node2D" parent="."]

[node name="StartPosition" type="Marker2D" parent="EntranceMarkers"]
position = Vector2(640, 360)
scale = Vector2(0.99999994, 0.99999994)

[node name="N" type="Marker2D" parent="EntranceMarkers"]
position = Vector2(640, 540)
scale = Vector2(0.226, 0.226)

[node name="E" type="Marker2D" parent="EntranceMarkers"]
position = Vector2(238, 360)
scale = Vector2(0.051076, 0.051076)

[node name="S" type="Marker2D" parent="EntranceMarkers"]
position = Vector2(640, 180)
scale = Vector2(0.226, 0.226)

[node name="W" type="Marker2D" parent="EntranceMarkers"]
position = Vector2(1078, 360)
scale = Vector2(0.226, 0.226)

[node name="AlienMarkers" type="Node2D" parent="."]

[node name="AlienSpot1" type="Marker2D" parent="AlienMarkers"]
position = Vector2(396, 270)

[node name="AlienSpot2" type="Marker2D" parent="AlienMarkers"]
position = Vector2(884, 270)

[node name="AlienSpot3" type="Marker2D" parent="AlienMarkers"]
position = Vector2(518, 360)

[node name="AlienSpot4" type="Marker2D" parent="AlienMarkers"]
position = Vector2(762, 360)

[node name="AlienSpot5" type="Marker2D" parent="AlienMarkers"]
position = Vector2(396, 450)

[node name="AlienSpot6" type="Marker2D" parent="AlienMarkers"]
position = Vector2(884, 450)

[node name="TickTimer" type="Timer" parent="."]

[connection signal="timeout" from="TickTimer" to="Rooms" method="_on_tick_timer_timeout"]
